# vsphere-nsx-tkgs-ansible

./: README.md  deploy.yaml
poetry/vsphere-env/: pyproject.toml
poetry/vsphere-env/tests/: test_vsphere_env.py
scripts/: README.md  deploy.sh  edit-vault.sh  rekey-vault.sh  requirements.yaml
